# AdityaCLI-V2

./: .gitignore  README.md  codebase.txt  pyproject.toml
apps/cli/: .gitignore  package-lock.json  package.json  tsconfig.json
apps/cli/src/: main.tsx
docs/architecture/: architecture.md  project-directives.md  provider.md  system-model.md  tools.md
docs/phases/: phase-01.md  phase-02-react-ink-foundation.md
scripts/: test_config.py
src/adityacli/agent/: __init__.py  exceptions.py  interface.py  manager.py  message_builder.py  models.py
src/adityacli/application/: application.py
src/adityacli/cli/: __init__.py  app.py  callbacks.py  console.py  main.py
src/adityacli/config/: .env.example  constants.py  settings.py
src/adityacli/contracts/: chat.py  generation.py  provider.py  runtime.py  tool_context.py  tools.py
src/adityacli/conversation/: __init__.py  manager.py  models.py  trimmer.py
src/adityacli/exceptions/: __init__.py  base.py  common.py  configuration.py  provider.py  session.py  startup.py  tool.py  workspace.py
src/adityacli/logging/: formatters.py  handlers.py  manager.py
src/adityacli/mcp/: __init__.py  exceptions.py  interface.py  manager.py  models.py  registry.py
src/adityacli/mode/: __init__.py  exceptions.py  manager.py  models.py
src/adityacli/provider/: __init__.py  exceptions.py  interface.py  manager.py  models.py  registry.py
src/adityacli/runtime/: __init__.py  constants.py  context_builder.py  context_models.py  exceptions.py  execution_plan.py  intent_router.py  manager.py  models.py  parser.py  parser_models.py  (+4 more)
(+63 files in other folders)
