[project]
name = "adityacli"
version = "2.0.0"
description = "A production-grade local-first AI developer assistant."
readme = "README.md"
requires-python = ">=3.12"


authors = [
    { name = "Aditya Saxena" }
]


dependencies = [
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "openai>=1.100.0",
    "httpx>=0.28.0",
]

[project.scripts]
aditya = "adityacli.cli.main:main"